--- a/controladora_ws2812_cortexM0.ioc
+++ b/controladora_ws2812_cortexM0.ioc
@@ -1,63 +1,101 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F0
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:true
-ProjectManager.LastFirmware=true
 ProjectManager.MainLocation=Core/Src
 NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+RCC.USART1Freq_Value=40000000
+ProjectManager.ProjectFileName=controladora_ws2812_cortexM0.ioc
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+PA7.Mode=TX_Only_Simplex_Unidirect_Master
+ProjectManager.KeepUserCode=true
+Mcu.UserName=STM32F030F4Px
+Mcu.PinsNb=3
+SPI1.VirtualType=VM_MASTER
+ProjectManager.NoMain=false
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,NSSPMode,DataSize,CLKPolarity
+RCC.PLLCLKFreq_Value=40000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.DefaultFWLocation=true
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false
+ProjectManager.DeletePrevious=true
+PinOutPanel.RotationAngle=0
+RCC.FamilyName=M
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
+Mcu.IP4=SYS
+RCC.FCLKCortexFreq_Value=40000000
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+SPI1.CLKPolarity=SPI_POLARITY_LOW
+Mcu.UserConstants=
+ProjectManager.TargetToolchain=STM32CubeIDE
+Mcu.ThirdPartyNb=0
+SPI1.Direction=SPI_DIRECTION_2LINES
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+RCC.HCLKFreq_Value=40000000
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Mcu.IPNb=5
+ProjectManager.PreviousToolchain=
+SPI1.CalculateBaudRate=2.5 MBits/s
+ProjectManager.RegisterCallBack=
+RCC.AHBFreq_Value=40000000
+Mcu.Pin0=PA5
+Mcu.Pin1=PA7
+Mcu.Pin2=VP_SYS_VS_tim14
+PA5.Signal=SPI1_SCK
+ProjectManager.ProjectBuild=false
+board=custom
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+ProjectManager.LastFirmware=true
+RCC.PLLMUL=RCC_PLL_MUL10
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.3
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 MxDb.Version=DB.6.0.20
-ProjectManager.ProjectFileName=controladora_ws2812_cortexM0.ioc
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.0
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F030F4Px
-Mcu.PinsNb=1
-ProjectManager.NoMain=false
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.DataSize=SPI_DATASIZE_8BIT
 File.Version=6
-RCC.PLLCLKFreq_Value=8000000
+Dma.SPI1_TX.0.Instance=DMA1_Channel3
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
 VP_SYS_VS_tim14.Mode=TIM14
 ProjectManager.FreePins=false
-RCC.IPParameters=FamilyName,PLLCLKFreq_Value,TimSysFreq_Value
-ProjectManager.DefaultFWLocation=true
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,PLLCLKFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F030F4Px
+Dma.RequestsNb=1
 ProjectManager.HalAssertFull=false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-ProjectManager.DeletePrevious=true
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 ProjectManager.ProjectName=controladora_ws2812_cortexM0
 ProjectManager.UnderRoot=true
 ProjectManager.CoupleFile=false
-PinOutPanel.RotationAngle=0
+Dma.SPI1_TX.0.Mode=DMA_NORMAL
+RCC.SYSCLKFreq_VALUE=40000000
 Mcu.Package=TSSOP20
-RCC.FamilyName=M
-RCC.TimSysFreq_Value=8000000
-ProjectManager.StackSize=0x400
+RCC.TimSysFreq_Value=40000000
 NVIC.TimeBase=TIM14_IRQn
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
-Mcu.IP2=SYS
-Mcu.IP0=NVIC
 NVIC.TimeBaseIP=TIM14
-Mcu.IP1=RCC
 ProjectManager.HeapSize=0x200
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.UserConstants=
-ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ComputerToolchain=false
-Mcu.ThirdPartyNb=0
-Mcu.IPNb=3
-ProjectManager.PreviousToolchain=
-ProjectManager.RegisterCallBack=
-Mcu.Pin0=VP_SYS_VS_tim14
+NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+RCC.APB1TimFreq_Value=40000000
+Dma.Request0=SPI1_TX
+RCC.APB1Freq_Value=40000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F030F4Px
 ProjectManager.LibraryCopy=1
-ProjectManager.ProjectBuild=false
-board=custom
+PA7.Signal=SPI1_MOSI
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
 isbadioc=false
