FreeRTOS será removido a partir desse commit

--- a/controladora_ws2812_cortexM0.ioc
+++ b/controladora_ws2812_cortexM0.ioc
@@ -9,7 +9,7 @@ Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F030F4Px
-Mcu.PinsNb=3
+Mcu.PinsNb=5
 SPI1.VirtualType=VM_MASTER
 ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,NSSPMode,DataSize,CLKPolarity
@@ -22,6 +22,7 @@ PinOutPanel.RotationAngle=0
 RCC.FamilyName=M
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
+PA13.Signal=SYS_SWDIO
 Mcu.IP4=SYS
 RCC.FCLKCortexFreq_Value=40000000
 Mcu.IP2=RCC
@@ -41,10 +42,14 @@ Mcu.IPNb=5
 ProjectManager.PreviousToolchain=
 SPI1.CalculateBaudRate=2.5 MBits/s
 ProjectManager.RegisterCallBack=
+PA7.GPIO_PuPd=GPIO_NOPULL
 RCC.AHBFreq_Value=40000000
 Mcu.Pin0=PA5
 Mcu.Pin1=PA7
-Mcu.Pin2=VP_SYS_VS_tim14
+GPIO.groupedBy=Group By Peripherals
+Mcu.Pin2=PA13
+Mcu.Pin3=PA14
+Mcu.Pin4=VP_SYS_VS_tim14
 PA5.Signal=SPI1_SCK
 ProjectManager.ProjectBuild=false
 board=custom
@@ -57,12 +62,14 @@ MxDb.Version=DB.6.0.20
 ProjectManager.BackupPrevious=false
 MxCube.Version=6.2.0
 SPI1.Mode=SPI_MODE_MASTER
+PA14.Mode=Serial_Wire
 SPI1.DataSize=SPI_DATASIZE_8BIT
 File.Version=6
 Dma.SPI1_TX.0.Instance=DMA1_Channel3
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 VP_SYS_VS_tim14.Mode=TIM14
+PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,PLLCLKFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
 ProjectManager.AskForMigrate=true
@@ -83,6 +90,7 @@ KeepUserPlacement=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 NVIC.TimeBaseIP=TIM14
+PA14.Signal=SYS_SWCLK
 ProjectManager.HeapSize=0x200
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -93,9 +101,10 @@ RCC.APB1TimFreq_Value=40000000
 Dma.Request0=SPI1_TX
 RCC.APB1Freq_Value=40000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+PA7.GPIOParameters=GPIO_PuPd
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F030F4Px
 ProjectManager.LibraryCopy=1
-PA7.Signal=SPI1_MOSI
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA7.Signal=SPI1_MOSI
 isbadioc=false
